rectangles, added legal to front page

--- a/index.html
+++ b/index.html
@@ -37,13 +37,7 @@
       </div>
     </div>
     <div id="footer">
-      Made with love by
-      <a href="http://vadim.ogievetsky.com">Vadim Ogievetsky</a>
-      for
-      <a href="http://anniealbagli.com">Annie Albagli</a>
-      &nbsp; / &nbsp;
-      Powered by
-      <a href="http://d3js.org/">D3</a>
+		<a href="legal.html">Legal</a>
     </div>
 
     <script type="text/javascript">
